[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "BCP47 language tags."
edition     = "2021"
homepage    = "https://hack.ink/language"
license     = "GPL-3.0"
name        = "language"
readme      = "README.md"
repository  = "https://github.com/hack-ink/language"
version     = "0.1.3"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0" }
